<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.company</groupId>
    <artifactId>java-test-app</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <!--<junit.jupiter.version>5.3.0-SNAPSHOT</junit.jupiter.version>-->
        <!--<junit.platform.version>1.3.0-SNAPSHOT</junit.platform.version>-->
    </properties>

    <dependencies>
        <!--<dependency>-->
        <!--<groupId>org.junit.jupiter</groupId>-->
        <!--<artifactId>junit-jupiter-engine</artifactId>-->
        <!--<version>${junit.jupiter.version}</version>-->
        <!--<scope>test</scope>-->
        <!--</dependency>-->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>4.1.2</version>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.apache.maven.surefire</groupId>-->
        <!--<artifactId>surefire-logger-api</artifactId>-->
        <!--<version>2.21.0</version>-->
        <!--&lt;!&ndash; to get around bug https://github.com/junit-team/junit5/issues/1367 &ndash;&gt;-->
        <!--<scope>test</scope>-->
        <!--<optional>true</optional>-->
        <!--</dependency>-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
        </dependency>
        <dependency>
            <groupId>com.github.vidstige</groupId>
            <artifactId>jadb</artifactId>
            <version>v1.1.0</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!--<plugin>-->
            <!--<artifactId>maven-surefire-plugin</artifactId>-->
            <!--<version>2.21.0</version>-->
            <!--<dependencies>-->
            <!--<dependency>-->
            <!--<groupId>org.junit.platform</groupId>-->
            <!--<artifactId>junit-platform-surefire-provider</artifactId>-->
            <!--<version>4.11</version>-->
            <!--</dependency>-->
            <!--</dependencies>-->
            <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
            <!--&lt;!&ndash;<parallel>all</parallel>&ndash;&gt;-->
            <!--&lt;!&ndash;<threadCount>8</threadCount>&ndash;&gt;-->
            <!--&lt;!&ndash;<perCoreThreadCount>false</perCoreThreadCount>&ndash;&gt;-->
            <!--&lt;!&ndash;&ndash;&gt;-->
            <!--&lt;!&ndash;</configuration>&ndash;&gt;-->

            <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
            <!--&lt;!&ndash;<parallel>methods</parallel>&ndash;&gt;-->
            <!--&lt;!&ndash;<useSystemClassLoader>false</useSystemClassLoader>&ndash;&gt;-->
            <!--&lt;!&ndash;<perCoreThreadCount>false</perCoreThreadCount>&ndash;&gt;-->
            <!--&lt;!&ndash;<forkCount>2.0C</forkCount>&ndash;&gt;-->
            <!--&lt;!&ndash;<reuseForks>true</reuseForks>&ndash;&gt;-->
            <!--&lt;!&ndash;<threadCount>20</threadCount>&ndash;&gt;-->
            <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
            <!--<configuration>-->
            <!--<forkCount>3</forkCount>-->
            <!--<reuseForks>true</reuseForks>-->
            <!--<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>-->
            <!--<parallel>methods</parallel>-->
            <!--<threadCount>10</threadCount>-->
            <!--</configuration>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <parallel>classes</parallel>
                    <useUnlimitedThreads>false</useUnlimitedThreads>
                    <threadCount>8</threadCount>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>